third_party/move/move-compiler-v2/tests/checking/typing/block_empty_invalid.exp

Diagnostics:
error: cannot adapt `()` to annotated type `u64`
  ┌─ tests/checking/typing/block_empty_invalid.move:3:10
  │
3 │         ({}: u64);
  │          ^^

error: cannot adapt `()` to annotated type `&u64`
  ┌─ tests/checking/typing/block_empty_invalid.move:4:10
  │
4 │         ({}: &u64);
  │          ^^

error: expected 2 items but found 0
  ┌─ tests/checking/typing/block_empty_invalid.move:5:10
  │
5 │         ({}: (u64, bool));
  │          ^^
